router link 테스트

--- a/vue-project/src/assets/css/reset.scss
+++ b/vue-project/src/assets/css/reset.scss
@@ -1,3 +1,286 @@
+// @import "../theme.scss";
+
+html {
+	font-size: 62.5%;
+	-webkit-text-size-adjust: 100%;
+}
+
 body {
-  // background-color: blue;
+	position: relative;
+	font-family: "Noto Sans KR", Dotum, Helvetica, "Apple SD Gothic Neo", sans-serif;
+	color: var(--color-text-basic);
+	line-height: 1.5;
+	overflow: auto;
+	// overflow: hidden;
+}
+
+// html,
+// body {
+// 	height: 100%;
+// }
+
+*,
+::before,
+::after {
+	box-sizing: border-box;
+}
+
+// recommend reset css
+body,
+div,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+pre,
+code,
+form,
+fieldset,
+legend,
+input,
+button,
+textarea,
+p,
+blockquote,
+th,
+td,
+.divider {
+	margin: 0;
+	padding: 0;
+}
+
+fieldset,
+img {
+	border: 0;
+}
+
+address,
+caption,
+cite,
+code,
+dfn,
+em,
+strong,
+th,
+var {
+	font-style: normal;
+	font-weight: normal;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-size: 100%;
+	font-weight: normal;
+}
+
+ul,
+ol,
+li {
+	list-style: none;
+}
+
+q:before,
+q:after {
+	content: "";
+}
+
+abbr,
+acronym {
+	border: 0;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+	background-color: transparent;
+	touch-action: manipulation;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+	font-family: inherit;
+	font-size: inherit;
+	line-height: inherit;
+	touch-action: manipulation;
+}
+
+input,
+textarea,
+button,
+label {
+	font: inherit;
+	color: inherit;
+	background-color: transparent;
+	-webkit-tap-highlight-color: transparent;
+	touch-action: manipulation;
+}
+
+button {
+	-webkit-appearance: none;
+	appearance: none;
+	cursor: pointer;
+	border: none;
+	text-align: initial;
+	background-color: transparent;
+}
+
+label,
+select {
+	cursor: pointer;
+}
+
+a:focus,
+button:focus {
+	background-color: inherit;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-transition: background-color 9999s ease-out;
+    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+    // -webkit-text-fill-color: #fff !important;
+}
+
+/*
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+	padding: 0;
+	border: 0;
+	border-style: none;
+}
+*/
+
+/*
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+	outline: 1px dotted ButtonText;
+}
+*/
+
+[type="checkbox"],
+[type="radio"] {
+	padding: 0;
+}
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+[type="search"] {
+	-webkit-appearance: textfield;
+	&::-webkit-search-decoration {
+		-webkit-appearance: none;
+	}
+}
+
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-results-button {
+    display: none;
+}
+
+::-webkit-file-upload-button {
+	font: inherit;
+	-webkit-appearance: button;
+}
+
+img {
+	max-width: 100%;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+caption {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	overflow: hidden;
+}
+
+::-ms-clear {
+	display: none;
+}
+
+::-ms-reveal {
+	display: none;
+}
+
+
+
+/* focus */
+// a:focus,
+// button:focus,
+// select:focus,
+// // .select_item:focus,
+// .select_item:focus {
+// // input:focus {
+// 	box-shadow: 0 0 0 1px rgba(0, 0, 0, 1);
+// 	outline: var(--border-width-static-medium) solid #000;
+// 	outline-offset: -2px;
+// }
+// 
+// input:focus {
+// 	+ label {
+// 		box-shadow: 0 0 0 1px rgba(0, 0, 0, 1);
+// 		outline: var(--border-width-static-medium) solid #000;
+// 		outline-offset: -2px;
+// 	}
+// }
+// 
+// .inp {
+// 	input:focus {
+// 		box-shadow: 0 0 0 1px rgba(0, 0, 0, 1);
+// 		outline: var(--border-width-static-medium) solid #000;
+// 		outline-offset: -2px;
+// 	}
+// }
+
+
+
+
+
+/* 모바일 디바이스 분기 */
+@media screen and (max-width: 375px) {
+	html {
+		font-size: calc(10 / 375 * 100vw) !important;
+	}
+}
+/* 모바일 디바이스 분기 */
+
+.sr_only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	padding: 0;
+	border-width: 0;
+	white-space: nowrap;
+	clip: rect(0, 0, 0, 0);
+	overflow: hidden;
 }
