--- a/vue-project/src/assets/css/reset.scss
+++ b/vue-project/src/assets/css/reset.scss
@@ -14,10 +14,10 @@ body {
 	// overflow: hidden;
 }
 
-// html,
-// body {
-// 	height: 100%;
-// }
+html,
+body {
+	height: 100%;
+}
 
 *,
 ::before,
