--- a/vue-project/src/assets/css/global.scss
+++ b/vue-project/src/assets/css/global.scss
@@ -36,11 +36,28 @@
 
 
 
+/* guide tags */
+.guide_title {
+  margin: 8px 0;
+  padding: 8px;
+  font-weight: 700;
+  font-size: 18px;
+  border-bottom: 2px solid #000;
+}
+.guide_text {
+  font-size: 16px;
+}
+/* guide tags */
 
 
 
-
-
+.test_sticky {
+  position: sticky;
+  top: 0;
+  text-align: center;
+  padding: 10px;
+  background-color: red;
+}
 
 
 
