--- a/vue-project/src/cps/checkbox/checkbox.module.scss
+++ b/vue-project/src/cps/checkbox/checkbox.module.scss
@@ -17,15 +17,16 @@
   label {
     position: relative;
     display: block;
-    padding-left: 24px;
-    line-height: 20px;
+    padding-left: 30px;
+    font-size: 16px;
+    // line-height: 20px;
     &::before {
       content: '';
       position: absolute;
-      top: 2px;
+      top: 0;
       left: 0;
-      width: 16px;
-      height: 16px;
+      width: 24px;
+      height: 24px;
       border-radius: 4px;
       border: 1px solid #000;
     }
