--- a/vue-project/src/assets/css/global.scss
+++ b/vue-project/src/assets/css/global.scss
@@ -41,18 +41,28 @@
 
 /* default layout */
 
+/* unit */
+.bold {
+	font-weight: bold;
+}
+/* unit */
+
 
 
 /* guide tags */
 .guide_title {
   margin: 8px 0;
-  padding: 8px;
+  padding: 9px 0;
   font-weight: 700;
   font-size: 18px;
   border-bottom: 2px solid #000;
 }
 .guide_text {
+	margin: 8px 0;
+	padding: 9px 0;
   font-size: 16px;
+	border-top: 1px solid #000;
+	border-bottom: 1px solid #000;
 }
 /* guide tags */
 
@@ -82,3 +92,21 @@
     }
   }
 }
+
+
+.test_dom {
+	display: flex;
+	&.test_dom_ty1 {
+		flex-direction: column;
+		gap: 8px ;
+	}
+}
+
+
+
+
+
+
+
+
+
